--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -1,8 +1,6 @@
 hero:
   image: /images/uploads/homepage-hero.jpg
-  title: Great coffee with a conscience
+  title: Casino Game  Art  Director/ Portfolio
 story: >-
-  Kaldi is the coffee store for everyone who believes that great coffee
-  shouldn't just taste good, it should do good too. We source all of our beans
-  directly from small scale sustainable farmers and make sure part of the
-  profits are reinvested in their communities.
+  I have over 8 years of game art design industry experience and 10+ years of
+  years of people management.
