--- a/data/settings/navigation.yml
+++ b/data/settings/navigation.yml
@@ -1,5 +1,7 @@
-nav_items: 
-  - {label: 'Home', path: '/'}
-  - {label: 'Products', path: '/products/'}
-  - {label: 'News', path: '/news'}
-
+nav_items:
+  - label: Home
+    path: /
+  - label: Portfolio
+    path: /products/
+  - label: News
+    path: /news
